<resources>
	<string name="app_name" translatable="false">Zero Bridge</string>
	<string name="service_name" translatable="false">Zero Bridge Service</string>
	<string name="title_activity_start" translatable="false">StartActivity</string>
	<string name="status_missing_permissions">Missing permissions</string>
	<string name="status_bluetooth_off">Bluetooth error</string>
	<string name="status_connecting">Scanning for bike</string>
	<string name="status_firmware_too_old">Firmware too old</string>
	<string name="status_connected">Connected</string>
	<string name="status_disabled">Disabled</string>
	<string name="setting_bridgeEnabled">Enable Nav Bridge</string>
	<string name="setting_showOnlyNearTurns">Only show navigation info within 2km</string>
	<string name="setting_listenToKurvigerNotifications">Use Kurviger notifications</string>
	<string name="setting_listenToMapsNotifications">Use Google Maps notifications</string>
	<string name="setting_listenToOsmAndNotifications">Use OsmAnd notifications</string>
	<string name="setting_showDebugInfo">Show debug information</string>
	<string name="permission_listenToMapsNotifications">Enable notification access to use this feature.</string>
	<string name="help_text"><![CDATA[
		<h1>How to use Zero Bridge</h1>
		<br/><br/>
		<h2>Follow these steps to setup the navigation bridge</h2>
		<br/>1. Pair the bike with your phone using the <a href="https://play.google.com/store/apps/details?id=com.zeromotorcycles.nextgen">Zero Next Gen</a> app.
		<br/>2. Make sure the Zero Next Gen app is closed.
		<br/>3. Install the navigation app you want to use, I recommend <a href="https://play.google.com/store/apps/details?id=com.kurviger.app">Kurviger</a> app (you will need a subscription to enable navigation).
		<br/>4. Start the Zero Bridge app.
		<br/>5. Make sure you grant the Bluetooth permission for Zero Bridge.
		<br/>6. Change setting on the main screen as needed.
		<br/>7. Enable the notification use option for your app and grant the notification access permission.
		<br/>8. Switch on your bike. If the status text is green everything worked.
		<br/><br/>
		<h2>Follow these steps to use the navigation bridge</h2>
		<br/>1. Switch on your bike.
		<br/>2. Make sure the Zero Next Gen app is closed. The bike should not be displaying the Bluetooth symbol.
		<br/>3. Start a navigation in your navigation app.
		<br/>You do not need to start the Zero Bridge app, a background service will be started and stopped on demand.
		<br/><br/>
		<h2>What models are compatible?</h2>
		<br/>All Cypher III models (2020 and newer) with up to date firmware should be compatible. The following models are known to work:
		<br/>- DSX/R (2023)
		<br/>- SR/F (2023)
		<br/>- SR/S (2021-2023)
		<br/>- S (gen 3)
		<br/><br/>
		<h2>Known issues</h2>
		<br/>- The bike firmware does some funky rounding sometimes on the distance to destination
		<br/>- Sometimes the dash will stay on if you switch the ignition key to off and navigation instructions are displayed. Just cycle the ignition again.
		<br/>- While the nav display on the bike is shown, the grip heat overlay is not shown probalby, you can still change the settings.
		<br/>- Some device manufacturers have heavy battery restrictions. If the Bridge does not start automatically, apply <a href="https://dontkillmyapp.com/">Dont kill my app</a> steps to the Bridge and your navigation app.
		<br/><br/>
		<h2>Data protection</h2>
		<br/>The app does not store any data besides the selected settings. It does not make any network requests. It does not access files on your phone.
		<br/>To use the notification integration the app needs access to your notifications. It only reads notifications for the enabled navigation app(s). It does not save notification data.
		]]></string>
	<string name="settings_header">Settings</string>
	<string name="debug_header">Debug info</string>
	<string name="mapslistener_service_name" translatable="false">Maps Listener Service</string>
</resources>