<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="5dp">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="2"
			android:orientation="vertical">

			<TextView
				android:id="@+id/status"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="2"
				android:onClick="doConnect"
				android:text="Starting"
				android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

			<TextView
				android:id="@+id/bikeInfo"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" />

		</LinearLayout>

		<ImageView
			android:id="@+id/helpButton"
			android:layout_width="55dp"
			android:layout_height="match_parent"
			android:layout_weight="0"
			android:contentDescription="Help button"
			android:onClick="doHelp"
			android:src="@android:drawable/ic_menu_info_details" />

	</LinearLayout>

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_marginVertical="5dp"
		android:background="@android:color/secondary_text_dark" />

	<TextView
		android:id="@+id/settings_header"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
		android:text="@string/settings_header" />

	<TableLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent" >

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/setting_bridgeEnabled" />

			<Switch
				android:id="@+id/bridgeEnabled"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:minWidth="48dp"
				android:minHeight="48dp" />

		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent" >

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/setting_listenToMapsNotifications" />

			<Switch
				android:id="@+id/listenToMapsNotifications"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:minWidth="48dp"
				android:minHeight="48dp" />

		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent" >

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/setting_listenToOsmAndNotifications" />

			<Switch
				android:id="@+id/listenToOsmAndNotifications"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:minWidth="48dp"
				android:minHeight="48dp" />

		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent" >

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/setting_showOnlyNearTurns" />

			<Switch
				android:id="@+id/settingOnlyShowNearTurn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:minWidth="48dp"
				android:minHeight="48dp" />

		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent" >

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/setting_showDebugInfo" />

			<Switch
				android:id="@+id/showDebugInfo"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:minWidth="48dp"
				android:minHeight="48dp" />

		</TableRow>

	</TableLayout>

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_marginVertical="5dp"
		android:background="@android:color/secondary_text_dark" />

	<LinearLayout
		android:id="@+id/debugInfo"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

		<TextView
			android:id="@+id/debug_header"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/debug_header"
			android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

		<TextView
			android:id="@+id/currentPacket"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />

		<TextView
			android:id="@+id/timeStamps"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />

		<ScrollView
			android:id="@+id/textLogScroll"
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

				<TextView
					android:id="@+id/textLog"
					android:layout_width="match_parent"
					android:layout_height="match_parent" />
			</LinearLayout>
		</ScrollView>
	</LinearLayout>

</LinearLayout>